# quadrotor

./: .clang-format  .gitattributes  .gitmodules  README.md
QuadrotorSim/: .gitignore  .ignore  Makefile  QuadrotorSim.code-workspace  QuadrotorSim.uproject  README.md  edit.sh  setup.sh
QuadrotorSim/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
QuadrotorSim/Content/Actors/: Quadcopter.uasset  QuadcopterPawn.uasset
QuadrotorSim/Content/Assets/: Cube.uasset  Material.uasset  Quadcopter_Assembly.uasset  quadrotor.fbx
QuadrotorSim/Content/CesiumSettings/CesiumIonServers/: CesiumIonSaaS.uasset
QuadrotorSim/Content/Levels/: SLOMainLevel.umap
QuadrotorSim/Source/: QuadrotorSim.Target.cs  QuadrotorSimEditor.Target.cs
QuadrotorSim/Source/QuadrotorSim/: QuadrotorSim.Build.cs  QuadrotorSim.cpp  QuadrotorSimGameModeBase.cpp  QuadrotorSimGameModeBase.h
firmware/esc_calibration/: esc_calibration.ino
firmware/flight_control/: attitude_control.cpp  attitude_control.h  constants.h  control_utils.cpp  control_utils.h  flight_control.ino  lpf.cpp  lpf.h  pid.cpp  pid.h  pwm_utils.cpp  pwm_utils.h
firmware/motor_test/: motor_test.ino
firmware/nano_scope/: nano_scope.ino
gazebo-sim/scripts/: compile_sim_plugins.sh  edit_blocks_world.sh  launch_blocks_world.sh
gazebo-sim/worlds/: quadrotor-blocks.sdf
hardware/flight_controller/: #auto_saved_files#  README.md  _autosave-flight_controller.kicad_pcb  _autosave-flight_controller.kicad_sch  flight_controller.kicad_pcb  flight_controller.kicad_prl  flight_controller.kicad_pro  flight_controller.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/flight_controller/gerber_files/: flight_controller-B_Cu.gbr  flight_controller-B_Mask.gbr  flight_controller-B_Paste.gbr  flight_controller-B_Silkscreen.gbr  flight_controller-Edge_Cuts.gbr  flight_controller-F_Cu.gbr  flight_controller-F_Mask.gbr  flight_controller-F_Paste.gbr  flight_controller-F_Silkscreen.gbr  flight_controller-NPTH-drl_map.ps  flight_controller-NPTH.drl  flight_controller-PTH-drl_map.ps  flight_controller-PTH.drl  flight_controller-job.gbrjob
hardware/kicad_libraries/SCR_KiCAD_Lib-master/: SCR_KiCAD_Lib.dcm  SCR_KiCAD_Lib.lib
hardware/kicad_libraries/SCR_KiCAD_Lib-master/SCR_KiCAD_Lib.pretty/: 646-SERIESHOLDER.kicad_mod  AdafruitFeatherM0LoRa.kicad_mod  AdafruitNokia5110.kicad_mod  BNO055.kicad_mod  LM2596.kicad_mod  ROS.kicad_mod  TO254P440X1000X2110-3P.kicad_mod  crab-image.kicad_mod  oklahoma-image.kicad_mod  robot-image.kicad_mod  scr-logo.kicad_mod  small-scr-logo.kicad_mod
hardware/kicad_libraries/teensy.pretty-master/: Teensy35_36_outerpins.kicad_mod
quadcopter_firmware/: quadcopter_firmware.ino
simulation/plugins/: CMakeLists.txt  quadrotor_dynamics_plugin.cpp
simulation/scripts/: launch_blocks_world.sh
software/: .gitignore  CMakeLists.txt  DartConfiguration.tcl
software/apps/: CMakeLists.txt  control_sim_main.cpp  gazebo_sim_main.cpp  main.cpp
software/control_sim/: CMakeLists.txt
software/control_sim/include/control_sim/: control_loop.h  control_sim_loop.h  events.h  math_utils.h  plotting.h  sim_clock.h
software/control_sim/src/: control_loop.cpp  control_sim_gui.cpp  control_sim_loop.cpp  logging.cpp  math_utils.cpp  sim_clock.cpp
software/docs/: WindowsSetup.md
software/include/: simulation_driver.h
software/include/control_sim/: control_loop.h  control_sim_gui.h  control_sim_loop.h  events.h  gains.h  logging.h  math_utils.h  pid_controller.h  plotting.h  quadcopter_dynamics.h  sim_clock.h
software/logs/: flight_100  flight_101  flight_102  flight_104  flight_110  flight_113  flight_116  flight_117  flight_118  flight_119  flight_128  flight_129  flight_131  flight_136  flight_139  flight_141  flight_143  flight_145  flight_20  flight_21  flight_22  flight_23  flight_24  flight_25  flight_26  flight_5  flight_50  flight_52  flight_53  flight_55  flight_56  flight_57  flight_59  flight_6  flight_60  flight_63  flight_65  flight_67  flight_73  flight_78  (+20 more)
software/quadcopter_autopilot/: CMakeLists.txt
software/quadcopter_autopilot/attitude_control/: CMakeLists.txt
software/quadcopter_autopilot/attitude_control/include/attitude_control/: attitude_control.h  parameters.h
software/quadcopter_autopilot/attitude_control/src/: attitude_control.cpp
software/scripts/: clean.sh  compile.sh  compile_sim_plugins.sh  control_sim.sh  edit_blocks_world.sh  run_sim.sh  setup.sh  wincompile.sh
software/src/: CMakeLists.txt  simulation_driver.cpp
software/src/control_sim/: CMakeLists.txt  control_loop.cpp  control_sim_gui.cpp  control_sim_loop.cpp  control_sim_main.cpp  logging.cpp  pid_controller.cpp  quadcopter_dynamics.cpp  sim_clock.cpp
software/tools/: Analyze Control Sim.ipynb  Analyze Flight.ipynb  Pipfile  flight_plot_utils.py  linear_systems.py  pyproject.toml  run.sh  sysid_utils.py
software/tools/.ipynb_checkpoints/: Analyze Control Sim-checkpoint.ipynb  Analyze Flight-checkpoint.ipynb
software/util/analysis/: SysID Flight.ipynb  flight_plot_utils.py  pyproject.toml  sysid_notes.txt
software/util/analysis/.ipynb_checkpoints/: Analyze Flight-checkpoint.ipynb  SysID Flight-checkpoint.ipynb
software/util/logs/: flight_109  flight_112  flight_114  flight_115  flight_120  flight_130  flight_132  flight_133  flight_134  flight_135  flight_137  flight_138  flight_140  flight_144  ground_roll_test_1  pcb_logging_test.csv
software/util/scripts/: clean.sh  compile.sh  control_sim.sh  run_sim.sh  setup.sh  wincompile.sh
