[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Justin Kleiber <jkleiber8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
ipykernel = "^6.22.0"
notebook = "^6.5.4"
lmfit = "^1.2.0"
jupyter = "^1.0.0"
pandas = "^2.0.0"
tornado = "6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
